# splat

./: .dockerignore  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPLAT_TEMPLATE.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
scripts/: entrypoint.sh  local_splat_runner.sh
splat/: __main__.py  model.py
splat/config/: config_loader.py  config_merger.py  model.py
splat/environments/: GithubActionsEnvironment.py  GitlabCIEnvironment.py  LocalEnvironment.py  common.py
splat/git/: gitpython_client.py  interface.py  utils.py
splat/interface/: APIClient.py  ExecutionEnvironmentInterface.py  GitPlatformInterface.py  NotificationSinksInterface.py  PackageManagerInterface.py  logger.py
splat/utils/: aggregate_summaries.py  errors.py  fs.py  git_operations.py  hooks_runner.py  logger_config.py  logging_utils.py  parseargs.py
system_tests/: Dockerfile  __init__.py  git_helpers.py  splat.yaml  test_refresh_splat_branch.py  test_splat_process.py  utils.py
system_tests/api/: github.py  gitlab.py
tests/config/: test_global_config_model_validation.py  test_local_config_model_validation.py
tests/environment/: test_fetch_filtered_projects_for_platforms.py  test_github_actions_environment.py  test_gitlab_ci_execution.py
tests/mocks/: __init__.py  mock_command_runner.py  mock_env_manager.py  mock_file_system.py  mock_git_client.py  mock_git_platform.py  mock_github_api.py  mock_gitlab_api.py  mock_logger.py  mock_notification_sink.py  mock_package_manager.py
tests/notifications/: base_test.py
(+163 files in other folders)
